Fix forum informers partial hiding with scrollbar

--- a/source/superhero.css
+++ b/source/superhero.css
@@ -263,8 +263,7 @@ body:not(.th_nightly) #timeout_bar {
 	direction: ltr;
 	float: left;
 	height: 23px;
-	margin-right: 20px;
-	margin: 0.4em 0 0 0.4em;
+	margin: 0.4em 20px 0 0.4em;
 	max-width: 500px;
 	min-width: 132px;
 	padding: 0.1em 0.5em;
